# backend

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  compose.prod.yaml  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  clippy.yaml
.sqlx/: query-0419ea48e213f03e6b1a390256d38fd0fbf55e538ef1393d6df57b250d2e27de.json  query-04836c143feaa45373bf7f6af41054e1c422d2536a7f4a65ea2a8fd10dbb6957.json  query-059517dd5bf22d929a75738422f5605143740a2ee749966d27e99d2e63416366.json  query-1f3597861cfc60bc2948f3189d2ccbf1c4f49453674b4bce2328fca14450c968.json  query-36084a6b4dbd6dcf72743177ba371a7925a18bad6684c148c78448489c33f8a2.json  query-3944ae9944c7ff8061a87b996c66fd077ed63974d8dbaeae97fda908c5b3ba3f.json  query-51fef54994c2065ee361cd0a15d0f13cfd777e8dddb399d271f2194e0af4a80e.json  query-52e4510557b2bb5307a147bdd063ab5f3f0169cc68034844fcded3abd98ab018.json  query-534f5cc2afcbc297b67657fd0792b7d9c0ad23081f90ffcdd3513619e09945cf.json  query-54c8f9bbc9a276335eda8253c323754c7bd312708b37a0b86c09067febf71caa.json  query-5534b3644db4040fb3e442224f0e380f1280bf61b702237e22a9ac8040ae2cdf.json  query-560bffcae1e69ce39c48a9f698a03045775f623d0a38894b83021c31a57797af.json  query-5accdddb31fb2845708b1ba38f2e40339f761edb3a2403af9b1413f98fde143d.json  query-65f022f42d938cd65242f7f5d384a70bca9ed7919c8c2c49313e062e8cbc193c.json  query-728bc87b890479cb568ab5e04810668155d401853dc233f1845c70311c355ef8.json  query-873d5c6d57f9e6a9b086db6db8db3ba886835876425fba9d5944571c835e15fb.json  query-9e2206b4eb869fd2212a1e66431b8ca8c39b816fb90d5fe9c75cce3c53bdcaec.json  query-a542f20c9095be6ca3340a703b549fdae433611b4b39d58c535da7281f4e567f.json  query-a8767bc9b81f926b40509dd8cbe25fe757d38d3808e605b842aebe09904e5378.json  query-aa3bdebf9f21831d52f53870b78129fb76bbb6bfebb5428fe2a9d922b48f4092.json  query-b2de9227cc1f761b42473c67b7e50601e69eec39a068ff8d62081fad3e724b98.json  query-bd7d38390ac562f946e326be30b3f07bce203f726b36a201612adbbe041ebfba.json  query-c896a8ebb2e190bc65ae3e8c7c5c93acacfc1e1e84a1b561da2fbdb8a7969284.json  query-cc7726b1cae4578a17769a94e8056f368678a5fdeddbc1889fd7c579843ca4e3.json  query-cfe6e629930299f2cd08c9fde17136cbe5ad7ef782c8860560eb4f3f8db3914a.json  query-da9caeba7d4fc65d96793d0e4ebd4185aa7db5c34ee9ae94eb35c018880d7310.json  query-dc02ad4f49fb447a24095bbc8c23d78e7080f88209bde502a8668f6a0341bd3e.json  query-dc7452e3b15246c3d3ecdf1c62a683e6ccb1252d35b0268fcfbd870eaa8c1ada.json  query-dc911a32154b65220169989307ad8c5da07635f2e170793cdf1a05d0d2be791c.json  query-e4c0bdeada6cf2214d2568c00db762a7eca8de2a1a69ce8816978895666bdc9b.json  query-ec18530256ca87780f61ef438317235f9e96f2f2a0949a85303f615be0f7efe0.json  query-ecc36b2e0fe7471fd2c25fb86828ef49392430853c70a450cd4c46d90397d150.json  query-eecd2ff2c294933367f8617da33f2c343b4346e9babe256f2bf93397ab8c0efa.json  query-f7560c0a670150eb8c8802e274f4b7b54a16ac284e7ffd977321834ccf391de4.json
api_server/: Cargo.toml
api_server/src/: main.rs
file_server/: Cargo.toml
file_server/src/: main.rs  plain_error_response.rs  request.rs  response.rs  routes.rs  serve.rs  service.rs
file_server/src/routes/: file.rs  root.rs
migrations/: 20240522023049_initialize.sql
src/: api.rs  content.rs  crypto.rs  db.rs  email.rs  id.rs  main.rs  percent_encoding.rs  response.rs  router.rs  services.rs  website.rs
src/api/: auth.rs  captcha.rs  routes.rs  validate.rs  validation.rs
src/api/routes/v1/: email_verification.rs  password_reset.rs  sessions.rs  users.rs
src/api/routes/v1/email_verification/: code.rs
src/api/routes/v1/password_reset/: password.rs
src/services/: api.rs  content.rs  website.rs
templates/email/: email_taken.html  password_reset.html  password_reset_failed.html  verification.html
tests/: common.rs
