[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
axum-macros = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
dotenvy = "0.15"
idna = "1"
lettre = { version = "0.11", features = ["serde"] }
percent-encoding = "2"
rand = "0.8"
ring = "0.17"
serde = "1"
serde_with = "3"
sqlx = { version = "0.8", features = ["macros", "runtime-tokio", "postgres", "chrono"] }
strum_macros = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[lints]
# Last updated for Clippy version: 1.81

# Enforces soundness.
rust.unsafe_code = "deny"

# Enforces documentation.
clippy.allow_attributes_without_reason = "warn"
clippy.missing_docs_in_private_items = "warn"
clippy.missing_errors_doc = "warn"
rust.missing_docs = "warn"

# Enforces panics are explicit and justified.
clippy.assertions_on_result_states = "warn"
clippy.indexing_slicing = "warn"
clippy.missing_assert_message = "warn"
clippy.unchecked_duration_subtraction = "warn"
clippy.unwrap_used = "warn"

# Helps performance and memory usage.
clippy.trivially_copy_pass_by_ref = "warn"
clippy.unnecessary_box_returns = "warn"
clippy.unused_async = "warn"

# Helps future-proofing and extensibility.
clippy.allow_attributes = "warn"
clippy.cast_lossless = "warn"
clippy.cloned_instead_of_copied = "warn"
clippy.empty_enum = "warn"
clippy.enum_glob_use = "warn"
clippy.future_not_send = "warn"
clippy.impl_trait_in_params = "warn"
clippy.implicit_hasher = "warn"
clippy.into_iter_without_iter = "warn"
clippy.iter_without_into_iter = "warn"
clippy.needless_pass_by_ref_mut = "warn"
clippy.needless_pass_by_value = "warn"
clippy.partial_pub_fields = "warn"
clippy.ref_option_ref = "warn"
clippy.rest_pat_in_fully_bound_structs = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
rust.missing_debug_implementations = "warn"

# Helps readability, clarity, and consistency.
clippy.checked_conversions = "warn"
clippy.clear_with_drain = "warn"
clippy.clone_on_ref_ptr = "warn"
clippy.copy_iterator = "warn"
clippy.default_trait_access = "warn"
clippy.empty_enum_variants_with_brackets = "warn"
clippy.empty_line_after_doc_comments = "warn"
clippy.empty_line_after_outer_attr = "warn"
clippy.equatable_if_let = "warn"
clippy.expl_impl_clone_on_copy = "warn"
clippy.explicit_deref_methods = "warn"
clippy.explicit_into_iter_loop = "warn"
clippy.explicit_iter_loop = "warn"
clippy.filter_map_next = "warn"
clippy.flat_map_option = "warn"
clippy.from_iter_instead_of_collect = "warn"
clippy.if_not_else = "warn"
clippy.if_then_some_else_none = "warn"
clippy.implicit_clone = "warn"
clippy.inconsistent_struct_constructor = "warn"
clippy.iter_filter_is_ok = "warn"
clippy.iter_filter_is_some = "warn"
clippy.iter_not_returning_iterator = "warn"
clippy.manual_assert = "warn"
clippy.manual_c_str_literals = "warn"
clippy.manual_clamp = "warn"
clippy.manual_instant_elapsed = "warn"
clippy.manual_is_variant_and = "warn"
clippy.manual_let_else = "warn"
clippy.manual_ok_or = "warn"
clippy.map_unwrap_or = "warn"
clippy.match_bool = "warn"
clippy.mixed_read_write_in_expression = "warn"
clippy.mod_module_files = "warn"
clippy.needless_bitwise_bool = "warn"
clippy.needless_continue = "warn"
clippy.needless_for_each = "warn"
clippy.needless_raw_string_hashes = "warn"
clippy.nonstandard_macro_braces = "warn"
clippy.option_as_ref_cloned = "warn"
clippy.option_option = "warn"
clippy.pub_without_shorthand = "warn"
clippy.range_minus_one = "warn"
clippy.range_plus_one = "warn"
clippy.redundant_clone = "warn"
clippy.redundant_closure_for_method_calls = "warn"
clippy.redundant_else = "warn"
clippy.redundant_type_annotations = "warn"
clippy.ref_binding_to_reference = "warn"
clippy.semicolon_inside_block = "warn"
clippy.single_match_else = "warn"
clippy.string_add = "warn"
clippy.string_add_assign = "warn"
clippy.string_to_string = "warn"
clippy.trait_duplication_in_bounds = "warn"
clippy.try_err = "warn"
clippy.type_repetition_in_bounds = "warn"
clippy.uninlined_format_args = "warn"
clippy.unnecessary_join = "warn"
clippy.unnested_or_patterns = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.unused_self = "warn"
clippy.use_self = "warn"
clippy.used_underscore_binding = "warn"
clippy.useless_let_if_seq = "warn"
clippy.zero_sized_map_values = "warn"
rust.non_ascii_idents = "warn"
rust.unreachable_pub = "warn"

# Catches accidents.
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_link_with_quotes = "warn"
clippy.empty_drop = "warn"
clippy.exit = "warn"
clippy.float_cmp = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.lossy_float_literal = "warn"
clippy.mut_mut = "warn"
clippy.rc_mutex = "warn"
clippy.read_zero_byte_vec = "warn"
clippy.readonly_write_lock = "warn"
clippy.tests_outside_test_module = "warn"
clippy.todo = "warn"
clippy.unimplemented = "warn"
clippy.unnecessary_safety_comment = "warn"
clippy.unnecessary_safety_doc = "warn"
clippy.unnecessary_self_imports = "warn"
clippy.unreachable = "warn"
clippy.unused_rounding = "warn"
rust.unused_crate_dependencies = "warn"
rustdoc.unescaped_backticks = "warn"

# Helps accuracy and precision.
clippy.imprecise_flops = "warn"
clippy.suboptimal_flops = "warn"
