[package]
name = "file_server"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
percent-encoding = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
