[package]
name = "file_server"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = "0.7"
axum-macros = "0.4"
dotenvy = "0.15"
once_cell = "1"
percent-encoding = "2"
sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
